[package]
name = "quartz-net"
version = "0.0.0"
description = "The client for the decentralized censorship-resistant blogging network Quartznet."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
keywords = ["gnunet"]
categories = []
readme = "README.md"
repository = "https://github.com/bamilab/quartznet"

[[bin]]
name = "quartznet"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "*"
async-std = "^1.9"
bincode = "^1.3"
fallible-iterator = "*"
fs2 = "^0.4"
futures = "^0.3.0"
lazy_static = "^1.0"
gnunet-async = { path = "../gnunet" }
#rusqlite = { path = "../../rusqlite" }
rusqlite = "^0.24"
serde = "^1.0"
serde_json = "^1.0"
tera = "^1.6"
thiserror = "^1.0"
tokio = { version = "^1.0", features = ["fs", "io-util", "rt-multi-thread"] }
unsafe-send-sync = "^0.1"